force-app/main/default/objects/Lead/fields/Country_Code_ISO3__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_ISO3__c</fullName>
    <formula>Case (Country_Code__c, 
&apos;AF&apos;,&apos;AFG&apos;,
&apos;AX&apos;,&apos;ALA&apos;,
&apos;AL&apos;,&apos;ALB&apos;,
&apos;DZ&apos;,&apos;DZA&apos;,
&apos;AS&apos;,&apos;ASM&apos;,
&apos;AD&apos;,&apos;AND&apos;,
&apos;AO&apos;,&apos;AGO&apos;,
&apos;AI&apos;,&apos;AIA&apos;,
&apos;AQ&apos;,&apos;ATA&apos;,
&apos;AG&apos;,&apos;ATG&apos;,
&apos;AR&apos;,&apos;ARG&apos;,
&apos;AM&apos;,&apos;ARM&apos;,
&apos;AW&apos;,&apos;ABW&apos;,
&apos;AU&apos;,&apos;AUS&apos;,
&apos;AT&apos;,&apos;AUT&apos;,
&apos;AZ&apos;,&apos;AZE&apos;,
&apos;BS&apos;,&apos;BHS&apos;,
&apos;BH&apos;,&apos;BHR&apos;,
&apos;BD&apos;,&apos;BGD&apos;,
&apos;BB&apos;,&apos;BRB&apos;,
&apos;BY&apos;,&apos;BLR&apos;,
&apos;BE&apos;,&apos;BEL&apos;,
&apos;BZ&apos;,&apos;BLZ&apos;,
&apos;BJ&apos;,&apos;BEN&apos;,
&apos;BM&apos;,&apos;BMU&apos;,
&apos;BT&apos;,&apos;BTN&apos;,
&apos;BO&apos;,&apos;BOL&apos;,
&apos;BQ&apos;,&apos;BES&apos;,
&apos;BA&apos;,&apos;BIH&apos;,
&apos;BW&apos;,&apos;BWA&apos;,
&apos;BV&apos;,&apos;BVT&apos;,
&apos;BR&apos;,&apos;BRA&apos;,
&apos;IO&apos;,&apos;IOT&apos;,
&apos;BN&apos;,&apos;BRN&apos;,
&apos;BG&apos;,&apos;BGR&apos;,
&apos;BF&apos;,&apos;BFA&apos;,
&apos;BI&apos;,&apos;BDI&apos;,
&apos;CV&apos;,&apos;CPV&apos;,
&apos;KH&apos;,&apos;KHM&apos;,
&apos;CM&apos;,&apos;CMR&apos;,
&apos;CA&apos;,&apos;CAN&apos;,
&apos;KY&apos;,&apos;CYM&apos;,
&apos;CF&apos;,&apos;CAF&apos;,
&apos;TD&apos;,&apos;TCD&apos;,
&apos;CL&apos;,&apos;CHL&apos;,
&apos;CN&apos;,&apos;CHN&apos;,
&apos;CX&apos;,&apos;CXR&apos;,
&apos;CC&apos;,&apos;CCK&apos;,
&apos;CO&apos;,&apos;COL&apos;,
&apos;KM&apos;,&apos;COM&apos;,
&apos;CD&apos;,&apos;COD&apos;,
&apos;CG&apos;,&apos;COG&apos;,
&apos;CK&apos;,&apos;COK&apos;,
&apos;CR&apos;,&apos;CRI&apos;,
&apos;CI&apos;,&apos;CIV&apos;,
&apos;HR&apos;,&apos;HRV&apos;,
&apos;CU&apos;,&apos;CUB&apos;,
&apos;CW&apos;,&apos;CUW&apos;,
&apos;CY&apos;,&apos;CYP&apos;,
&apos;CZ&apos;,&apos;CZE&apos;,
&apos;DK&apos;,&apos;DNK&apos;,
&apos;DJ&apos;,&apos;DJI&apos;,
&apos;DM&apos;,&apos;DMA&apos;,
&apos;DO&apos;,&apos;DOM&apos;,
&apos;EC&apos;,&apos;ECU&apos;,
&apos;EG&apos;,&apos;EGY&apos;,
&apos;SV&apos;,&apos;SLV&apos;,
&apos;GQ&apos;,&apos;GNQ&apos;,
&apos;ER&apos;,&apos;ERI&apos;,
&apos;EE&apos;,&apos;EST&apos;,
&apos;SZ&apos;,&apos;SWZ&apos;,
&apos;ET&apos;,&apos;ETH&apos;,
&apos;FK&apos;,&apos;FLK&apos;,
&apos;FO&apos;,&apos;FRO&apos;,
&apos;FJ&apos;,&apos;FJI&apos;,
&apos;FI&apos;,&apos;FIN&apos;,
&apos;FR&apos;,&apos;FRA&apos;,
&apos;GF&apos;,&apos;GUF&apos;,
&apos;PF&apos;,&apos;PYF&apos;,
&apos;TF&apos;,&apos;ATF&apos;,
&apos;GA&apos;,&apos;GAB&apos;,
&apos;GM&apos;,&apos;GMB&apos;,
&apos;GE&apos;,&apos;GEO&apos;,
&apos;DE&apos;,&apos;DEU&apos;,
&apos;GH&apos;,&apos;GHA&apos;,
&apos;GI&apos;,&apos;GIB&apos;,
&apos;GR&apos;,&apos;GRC&apos;,
&apos;GL&apos;,&apos;GRL&apos;,
&apos;GD&apos;,&apos;GRD&apos;,
&apos;GP&apos;,&apos;GLP&apos;,
&apos;GU&apos;,&apos;GUM&apos;,
&apos;GT&apos;,&apos;GTM&apos;,
&apos;GG&apos;,&apos;GGY&apos;,
&apos;GN&apos;,&apos;GIN&apos;,
&apos;GW&apos;,&apos;GNB&apos;,
&apos;GY&apos;,&apos;GUY&apos;,
&apos;HT&apos;,&apos;HTI&apos;,
&apos;HM&apos;,&apos;HMD&apos;,
&apos;VA&apos;,&apos;VAT&apos;,
&apos;HN&apos;,&apos;HND&apos;,
&apos;HK&apos;,&apos;HKG&apos;,
&apos;HU&apos;,&apos;HUN&apos;,
&apos;IS&apos;,&apos;ISL&apos;,
&apos;IN&apos;,&apos;IND&apos;,
&apos;ID&apos;,&apos;IDN&apos;,
&apos;IR&apos;,&apos;IRN&apos;,
&apos;IQ&apos;,&apos;IRQ&apos;,
&apos;IE&apos;,&apos;IRL&apos;,
&apos;IM&apos;,&apos;IMN&apos;,
&apos;IL&apos;,&apos;ISR&apos;,
&apos;IT&apos;,&apos;ITA&apos;,
&apos;JM&apos;,&apos;JAM&apos;,
&apos;JP&apos;,&apos;JPN&apos;,
&apos;JE&apos;,&apos;JEY&apos;,
&apos;JO&apos;,&apos;JOR&apos;,
&apos;KZ&apos;,&apos;KAZ&apos;,
&apos;KE&apos;,&apos;KEN&apos;,
&apos;KI&apos;,&apos;KIR&apos;,
&apos;KP&apos;,&apos;PRK&apos;,
&apos;KR&apos;,&apos;KOR&apos;,
&apos;KW&apos;,&apos;KWT&apos;,
&apos;KG&apos;,&apos;KGZ&apos;,
&apos;LA&apos;,&apos;LAO&apos;,
&apos;LV&apos;,&apos;LVA&apos;,
&apos;LB&apos;,&apos;LBN&apos;,
&apos;LS&apos;,&apos;LSO&apos;,
&apos;LR&apos;,&apos;LBR&apos;,
&apos;LY&apos;,&apos;LBY&apos;,
&apos;LI&apos;,&apos;LIE&apos;,
&apos;LT&apos;,&apos;LTU&apos;,
&apos;LU&apos;,&apos;LUX&apos;,
&apos;MO&apos;,&apos;MAC&apos;,
&apos;MK&apos;,&apos;MKD&apos;,
&apos;MG&apos;,&apos;MDG&apos;,
&apos;MW&apos;,&apos;MWI&apos;,
&apos;MY&apos;,&apos;MYS&apos;,
&apos;MV&apos;,&apos;MDV&apos;,
&apos;ML&apos;,&apos;MLI&apos;,
&apos;MT&apos;,&apos;MLT&apos;,
&apos;MH&apos;,&apos;MHL&apos;,
&apos;MQ&apos;,&apos;MTQ&apos;,
&apos;MR&apos;,&apos;MRT&apos;,
&apos;MU&apos;,&apos;MUS&apos;,
&apos;YT&apos;,&apos;MYT&apos;,
&apos;MX&apos;,&apos;MEX&apos;,
&apos;FM&apos;,&apos;FSM&apos;,
&apos;MD&apos;,&apos;MDA&apos;,
&apos;MC&apos;,&apos;MCO&apos;,
&apos;MN&apos;,&apos;MNG&apos;,
&apos;ME&apos;,&apos;MNE&apos;,
&apos;MS&apos;,&apos;MSR&apos;,
&apos;MA&apos;,&apos;MAR&apos;,
&apos;MZ&apos;,&apos;MOZ&apos;,
&apos;MM&apos;,&apos;MMR&apos;,
&apos;NA&apos;,&apos;NAM&apos;,
&apos;NR&apos;,&apos;NRU&apos;,
&apos;NP&apos;,&apos;NPL&apos;,
&apos;NL&apos;,&apos;NLD&apos;,
&apos;NC&apos;,&apos;NCL&apos;,
&apos;NZ&apos;,&apos;NZL&apos;,
&apos;NI&apos;,&apos;NIC&apos;,
&apos;NE&apos;,&apos;NER&apos;,
&apos;NG&apos;,&apos;NGA&apos;,
&apos;NU&apos;,&apos;NIU&apos;,
&apos;NF&apos;,&apos;NFK&apos;,
&apos;MP&apos;,&apos;MNP&apos;,
&apos;NO&apos;,&apos;NOR&apos;,
&apos;OM&apos;,&apos;OMN&apos;,
&apos;PK&apos;,&apos;PAK&apos;,
&apos;PW&apos;,&apos;PLW&apos;,
&apos;PS&apos;,&apos;PSE&apos;,
&apos;PA&apos;,&apos;PAN&apos;,
&apos;PG&apos;,&apos;PNG&apos;,
&apos;PY&apos;,&apos;PRY&apos;,
&apos;PE&apos;,&apos;PER&apos;,
&apos;PH&apos;,&apos;PHL&apos;,
&apos;PN&apos;,&apos;PCN&apos;,
&apos;PL&apos;,&apos;POL&apos;,
&apos;PT&apos;,&apos;PRT&apos;,
&apos;PR&apos;,&apos;PRI&apos;,
&apos;QA&apos;,&apos;QAT&apos;,
&apos;RE&apos;,&apos;REU&apos;,
&apos;RO&apos;,&apos;ROU&apos;,
&apos;RU&apos;,&apos;RUS&apos;,
&apos;RW&apos;,&apos;RWA&apos;,
&apos;BL&apos;,&apos;BLM&apos;,
&apos;SH&apos;,&apos;SHN&apos;,
&apos;KN&apos;,&apos;KNA&apos;,
&apos;LC&apos;,&apos;LCA&apos;,
&apos;MF&apos;,&apos;MAF&apos;,
&apos;PM&apos;,&apos;SPM&apos;,
&apos;VC&apos;,&apos;VCT&apos;,
&apos;WS&apos;,&apos;WSM&apos;,
&apos;SM&apos;,&apos;SMR&apos;,
&apos;ST&apos;,&apos;STP&apos;,
&apos;SA&apos;,&apos;SAU&apos;,
&apos;SN&apos;,&apos;SEN&apos;,
&apos;RS&apos;,&apos;SRB&apos;,
&apos;SC&apos;,&apos;SYC&apos;,
&apos;SL&apos;,&apos;SLE&apos;,
&apos;SG&apos;,&apos;SGP&apos;,
&apos;SX&apos;,&apos;SXM&apos;,
&apos;SK&apos;,&apos;SVK&apos;,
&apos;SI&apos;,&apos;SVN&apos;,
&apos;SB&apos;,&apos;SLB&apos;,
&apos;SO&apos;,&apos;SOM&apos;,
&apos;ZA&apos;,&apos;ZAF&apos;,
&apos;GS&apos;,&apos;SGS&apos;,
&apos;SS&apos;,&apos;SSD&apos;,
&apos;ES&apos;,&apos;ESP&apos;,
&apos;LK&apos;,&apos;LKA&apos;,
&apos;SD&apos;,&apos;SDN&apos;,
&apos;SR&apos;,&apos;SUR&apos;,
&apos;SJ&apos;,&apos;SJM&apos;,
&apos;SE&apos;,&apos;SWE&apos;,
&apos;CH&apos;,&apos;CHE&apos;,
&apos;SY&apos;,&apos;SYR&apos;,
&apos;TW&apos;,&apos;TWN&apos;,
&apos;TJ&apos;,&apos;TJK&apos;,
&apos;TZ&apos;,&apos;TZA&apos;,
&apos;TH&apos;,&apos;THA&apos;,
&apos;TL&apos;,&apos;TLS&apos;,
&apos;TG&apos;,&apos;TGO&apos;,
&apos;TK&apos;,&apos;TKL&apos;,
&apos;TO&apos;,&apos;TON&apos;,
&apos;TT&apos;,&apos;TTO&apos;,
&apos;TN&apos;,&apos;TUN&apos;,
&apos;TR&apos;,&apos;TUR&apos;,
&apos;TM&apos;,&apos;TKM&apos;,
&apos;TC&apos;,&apos;TCA&apos;,
&apos;TV&apos;,&apos;TUV&apos;,
&apos;UG&apos;,&apos;UGA&apos;,
&apos;UA&apos;,&apos;UKR&apos;,
&apos;AE&apos;,&apos;ARE&apos;,
&apos;GB&apos;,&apos;GBR&apos;,
&apos;UM&apos;,&apos;UMI&apos;,
&apos;US&apos;,&apos;USA&apos;,
&apos;UY&apos;,&apos;URY&apos;,
&apos;UZ&apos;,&apos;UZB&apos;,
&apos;VU&apos;,&apos;VUT&apos;,
&apos;VE&apos;,&apos;VEN&apos;,
&apos;VN&apos;,&apos;VNM&apos;,
&apos;VG&apos;,&apos;VGB&apos;,
&apos;VI&apos;,&apos;VIR&apos;,
&apos;WF&apos;,&apos;WLF&apos;,
&apos;EH&apos;,&apos;ESH&apos;,
&apos;YE&apos;,&apos;YEM&apos;,
&apos;ZM&apos;,&apos;ZMB&apos;,
&apos;ZW&apos;,&apos;ZWE&apos;,&apos;&apos;
)</formula>
    <label>Country Code ISO3</label>
    <type>Text</type>
</CustomField>