force-app/main/default/objects/Lead/fields/Country_Current_Source__c.field-meta.xml
<CustomField>
    <fullName>Country_Current_Source__c</fullName>
    <label>Country Current Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>