force-app/main/default/objects/Lead/fields/Country_Current_Source_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Country_Current_Source_Last_Updated__c</fullName>
    <label>Country Current Source Last Updated</label>
    <type>DateTime</type>
</CustomField>