force-app/main/default/objects/Lead/fields/Country_LDR_Compare__c.field-meta.xml
<CustomField>
    <fullName>Country_LDR_Compare__c</fullName>
    <description>Compare &quot;Registration Country&quot; to &quot;Polygraph Country&quot;</description>
    <formula>If(Upper(Country)=Upper(Polygraph_Country_Name__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country LDR Compare</label>
    <type>Checkbox</type>
</CustomField>