force-app/main/default/objects/Lead/fields/Country_Length__c.field-meta.xml
<CustomField>
    <fullName>Country_Length__c</fullName>
    <description>For assistance with case with Salesforce.</description>
    <formula>LEN(Country)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>