force-app/main/default/objects/Lead/fields/Country_Original_Source_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Country_Original_Source_Last_Updated__c</fullName>
    <label>Country Original Source Last Updated</label>
    <type>DateTime</type>
</CustomField>