force-app/main/default/objects/Lead/fields/Country_registration__c.field-meta.xml
<CustomField>
    <fullName>Country_registration__c</fullName>
    <label>Country (registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>