force-app/main/default/objects/Lead/fields/CountryCodeFromLeadCapture__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeFromLeadCapture__c</fullName>
    <label>CountryCodeFromLeadCapture</label>
    <length>10</length>
    <type>Text</type>
</CustomField>