force-app/main/default/objects/Lead/fields/CU_Trigger_Path__c.field-meta.xml
<CustomField>
    <fullName>CU_Trigger_Path__c</fullName>
    <description>MIS-4080</description>
    <label>CU Trigger Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>