force-app/main/default/objects/Lead/fields/Current_Lead_Source_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Source_Last_Updated__c</fullName>
    <label>Current Lead Source Last Updated</label>
    <type>DateTime</type>
</CustomField>