force-app/main/default/objects/Lead/fields/Current_Registration_Type_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Current_Registration_Type_Timestamp__c</fullName>
    <label>Current Registration Type Timestamp</label>
    <type>DateTime</type>
</CustomField>