force-app/main/default/objects/Lead/fields/Data_Fox_Company_ID_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Data_Fox_Company_ID_TimeStamp__c</fullName>
    <label>DataFox Company ID TimeStamp</label>
    <type>DateTime</type>
</CustomField>