force-app/main/default/objects/Lead/fields/Default_Picture__c.field-meta.xml
<CustomField>
    <fullName>Default_Picture__c</fullName>
    <defaultValue>&quot;http://pages.similarweb.com/rs/similargroup/images/iconathon_fraud_simple-silver_64x64.png&quot;</defaultValue>
    <label>Default Picture</label>
    <type>Url</type>
</CustomField>