force-app/main/default/objects/Lead/fields/DefaultProfilePicture__c.field-meta.xml
<CustomField>
    <fullName>DefaultProfilePicture__c</fullName>
    <formula>HYPERLINK(&quot;http://pages.similarweb.com/rs/similargroup/images/iconathon_fraud_simple-silver_64x64.png&quot;,&quot;Default Picture&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Profile Picture</label>
    <type>Text</type>
</CustomField>