force-app/main/default/objects/Lead/fields/Demo_optin__c.field-meta.xml
<CustomField>
    <fullName>Demo_optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo_optin</label>
    <type>Checkbox</type>
</CustomField>