force-app/main/default/objects/Lead/fields/Department_LDR_Compare__c.field-meta.xml
<CustomField>
    <fullName>Department_LDR_Compare__c</fullName>
    <formula>If(Upper(Department_registration__c)=Upper(Polygraph_Department__c), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department LDR Compare</label>
    <type>Checkbox</type>
</CustomField>