force-app/main/default/objects/Lead/fields/DF_Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>DF_Year_Founded__c</fullName>
    <label>DF Year Founded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>