force-app/main/default/objects/Lead/fields/Direct_traffic__c.field-meta.xml
<CustomField>
    <fullName>Direct_traffic__c</fullName>
    <formula>sw_connector__swId__r.sw_connector__Traffic_Source_Direct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct traffic %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>