force-app/main/default/objects/Lead/fields/Director_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Director_s_Manager__c</fullName>
    <formula>Owner:User.Manager.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director&apos;s Manager</label>
    <type>Text</type>
</CustomField>