force-app/main/default/objects/Lead/fields/Director_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Director_s_Manager_Email__c</fullName>
    <label>Director&apos;s Manager Email</label>
    <type>Email</type>
</CustomField>