force-app/main/default/objects/Lead/fields/Display_Ads__c.field-meta.xml
<CustomField>
    <fullName>Display_Ads__c</fullName>
    <label>Display Ads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>