force-app/main/default/objects/Lead/fields/Division_Text__c.field-meta.xml
<CustomField>
    <fullName>Division_Text__c</fullName>
    <description>MIS-957</description>
    <label>Division (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>