force-app/main/default/objects/Lead/fields/DomainLD__c.field-meta.xml
<CustomField>
    <fullName>DomainLD__c</fullName>
    <formula>IF(Email_DomainClean__c=Null &amp;&amp;  WebsiteDomain__c=Null,Null, 
IF( Email_DomainClean__c=Null,WebsiteDomain__c,
IF( WebsiteDomain__c=Null,Email_DomainClean__c,
IF(Email_DomainClean__c&lt;&gt;Null &amp;&amp; WebsiteDomain__c&lt;&gt;Null &amp;&amp; ISPICKVAL(Email_address_domain_type__c,&quot;Company&quot;), Email_DomainClean__c,
WebsiteDomain__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain LD</label>
    <type>Text</type>
</CustomField>