force-app/main/default/objects/Lead/fields/Downloaded_App_PDF__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_App_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lead downloaded App PDF</inlineHelpText>
    <label>Downloaded App PDF</label>
    <type>Checkbox</type>
</CustomField>