force-app/main/default/objects/Lead/fields/Downloaded_Excel__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Excel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloaded Excel</label>
    <type>Checkbox</type>
</CustomField>