force-app/main/default/objects/Lead/fields/Einstein_Engagement_level__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Engagement_level__c</fullName>
    <description>MIS-3333</description>
    <label>Einstein Engagement level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>