force-app/main/default/objects/Lead/fields/Email_address_domain_type__c.field-meta.xml
<CustomField>
    <fullName>Email_address_domain_type__c</fullName>
    <inlineHelpText>Indicates if the email belongs to a company or a free email provider</inlineHelpText>
    <label>Email address domain type SFDC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Company - Secondary</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>