force-app/main/default/objects/Lead/fields/Email_Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Email_Captured_At__c</fullName>
    <label>Email Captured At</label>
    <type>DateTime</type>
</CustomField>