force-app/main/default/objects/Lead/fields/Email_Current_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_Current_Source__c</fullName>
    <label>Email Current Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>