force-app/main/default/objects/Lead/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>Populated by Marketo</description>
    <inlineHelpText>Populated by Marketo</inlineHelpText>
    <label>Email Domain Marketo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>