force-app/main/default/objects/Lead/fields/Email_Domain_Type_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Type_Timestamp__c</fullName>
    <label>Email Domain Type Timestamp</label>
    <type>DateTime</type>
</CustomField>