force-app/main/default/objects/Lead/fields/Email_DomainClean__c.field-meta.xml
<CustomField>
    <fullName>Email_DomainClean__c</fullName>
    <formula>SUBSTITUTE(  Email  , LEFT( Email , FIND(&quot;@&quot;, Email )), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>