force-app/main/default/objects/Lead/fields/Email_Original_Source_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Email_Original_Source_Last_Updated__c</fullName>
    <label>Email Original Source Last Updated</label>
    <type>Date</type>
</CustomField>