force-app/main/default/objects/Lead/fields/Email_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_Source__c</fullName>
    <label>Email Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>