force-app/main/default/objects/Lead/fields/Employee_Min_LDR_Compare__c.field-meta.xml
<CustomField>
    <fullName>Employee_Min_LDR_Compare__c</fullName>
    <formula>If(EmployeesMin_registration__c=Polygraph_Employee_Min__c, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Min LDR Compare</label>
    <type>Checkbox</type>
</CustomField>