force-app/main/default/objects/Lead/fields/Employee_Min_Update_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Employee_Min_Update_Timestamp__c</fullName>
    <label>Employee Min Update Timestamp</label>
    <type>DateTime</type>
</CustomField>