force-app/main/default/objects/Lead/fields/Engaged_Lead__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Lead__c</fullName>
    <description>Mirror the &quot;Engaged&quot; field from related &quot;BI Data&quot; object. MIS - 2954</description>
    <formula>BI_Data__r.Engaged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaged Lead</label>
    <type>Checkbox</type>
</CustomField>