force-app/main/default/objects/Lead/fields/Enrichment_Details__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Details__c</fullName>
    <label>Enrichment_Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>