force-app/main/default/objects/Lead/fields/Enrichment_Source__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Source__c</fullName>
    <label>Enrichment Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cygnus</fullName>
            </value>
            <value>
                <fullName>Yael Versano</fullName>
            </value>
            <value>
                <fullName>Mass Verify</fullName>
            </value>
            <value>
                <fullName>Clearbit</fullName>
            </value>
            <value>
                <fullName>Datafox</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>LeadIQ</fullName>
            </value>
            <value>
                <fullName>Comeback</fullName>
            </value>
            <value>
                <fullName>Enrichment Team</fullName>
            </value>
            <value>
                <fullName>Brandbase</fullName>
            </value>
            <value>
                <fullName>Sales Intelligence</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Marketing Operations Manual</fullName>
            </value>
            <value>
                <fullName>Marketing Operations SI</fullName>
            </value>
            <value>
                <fullName>Marketing Operations Clearbit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>