force-app/main/default/objects/Lead/fields/enrichment_success__c.field-meta.xml
<CustomField>
    <fullName>enrichment_success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enrichment_success</label>
    <type>Checkbox</type>
</CustomField>