force-app/main/default/objects/Lead/fields/Enrichment_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_timestamp__c</fullName>
    <description>Used by LeadTriggerHandler, this field is populated when employees min/max is getting the connector values</description>
    <label>EMP enriched by SW Connector</label>
    <type>DateTime</type>
</CustomField>