force-app/main/default/objects/Lead/fields/Exclude_from_Funnel_Journey__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Funnel_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Funnel Journey</label>
    <type>Checkbox</type>
</CustomField>