force-app/main/default/objects/Lead/fields/Fake_Data__c.field-meta.xml
<CustomField>
    <fullName>Fake_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-7697
Field will be populated automatically from Groudon or LeadCapture trigger.</description>
    <label>Fake Data</label>
    <type>Checkbox</type>
</CustomField>