force-app/main/default/objects/Lead/fields/Fake_Data_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fake_Data_Reason__c</fullName>
    <description>MIS-7697
Field will be populated automatically from Groudon or LeadCapture trigger. 

&quot;Blacklist Website&quot; (pre-enrichment)

&quot;Groudon detected an invalid name.&quot;

&quot;Groudon detected an invalid email.&quot;

&quot;Groudon detected an invalid website.&quot;</description>
    <label>Fake Data Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>