force-app/main/default/objects/Lead/fields/First_Behavioral_Rate_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Behavioral_Rate_Timestamp__c</fullName>
    <label>First Behavioral Rate Timestamp</label>
    <type>DateTime</type>
</CustomField>