force-app/main/default/objects/Lead/fields/First_Form_Location_URL__c.field-meta.xml
<CustomField>
    <fullName>First_Form_Location_URL__c</fullName>
    <label>First Form Location URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>