force-app/main/default/objects/Lead/fields/First_Meeting_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Created_Date__c</fullName>
    <description>MIS-4608</description>
    <label>First Meeting Created Date</label>
    <type>DateTime</type>
</CustomField>