force-app/main/default/objects/Lead/fields/First_MQL_Calc__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Calc__c</fullName>
    <label>First MQL Calc</label>
    <type>DateTime</type>
</CustomField>