force-app/main/default/objects/Lead/fields/First_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Date__c</fullName>
    <description>Marketo SFDC MQL Date</description>
    <label>First MQL Date</label>
    <type>DateTime</type>
</CustomField>