force-app/main/default/objects/Lead/fields/First_MQL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Timestamp__c</fullName>
    <description>First MQL Date in SFDC</description>
    <label>SFDC First MQL Timestamp</label>
    <type>DateTime</type>
</CustomField>