force-app/main/default/objects/Lead/fields/First_Name_LDR_Compare__c.field-meta.xml
<CustomField>
    <fullName>First_Name_LDR_Compare__c</fullName>
    <formula>If(Upper(Polygraph_First_Name__c)=Upper(First_Name_Registration__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name LDR Compare</label>
    <type>Checkbox</type>
</CustomField>