force-app/main/default/objects/Lead/fields/First_Name_Registration__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Registration__c</fullName>
    <label>First Name (Registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>